Adiciona card com perfil do usuário

--- a/style.css
+++ b/style.css
@@ -1,5 +1,9 @@
 .centralizado {
-    position: absolute;
-    left: 50%;
-    top: 50%;        
+  position: absolute;
+  left: 50%;
+  top: 50%;
+}
+
+.link-centro {
+  margin-left: 5rem;
 }
